# edgy

./: .gitignore  CHANGELOG.md  README.md  cabal.project  edgy.cabal
app/: Cardinality.hs  Edgy.hs  Main.hs  Node.hs  Schema.hs  Schema2.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Edgy.hs
src/Edgy/: Cardinality.hs  DB.hs  IsNode.hs  Node.hs  Operations.hs  Schema.hs
